# zene

./: .gitignore  AGENT_FLOW.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_GUIDE.md  analyze_project.py  zene_config.toml
.github/workflows/: deploy-docs.yml  release.yml
crates/zene-core/: Cargo.toml
crates/zene-core/src/: lib.rs
crates/zene-core/src/agent/: compactor.rs  engine.rs  executor.rs  mod.rs  orchestrator.rs  prompt.rs  runner.rs
crates/zene-core/src/agent/strategies/: mod.rs
crates/zene-core/src/engine/: context.rs  contracts.rs  error.rs  mod.rs  plan.rs  runtime.rs  strategy.rs
crates/zene-core/src/engine/memory/: embedder.rs  mod.rs  store.rs
crates/zene-core/src/engine/observability/: mod.rs
crates/zene-core/src/engine/session/: mod.rs
crates/zene-core/src/engine/worker/: mod.rs
crates/zene-worker/: Cargo.toml
crates/zene-worker/src/: lib.rs
docs/: AGENT_FLOW.md  API.md  ARCHITECTURAL_PATTERNS.md  ARCHITECTURE.md  CONTEXT.md  CONTEXT_STRATEGY.md  EXTENSIONS.md  ROADMAP.md  architecture_isolation.md  blog_post_multi_agent_react.md  comparison_with_codex.md  context_memory_design.md  plugin_architecture.md  python_env.md  roadmap_optimization.md
examples/: 01_hello_world.sh  02_web_fetch.sh  03_session_demo.py  04_multi_agent_demo.py  05_react_component_demo.py  06_full_react_app.py  14_mcp_demo.sh  15_host_soak_and_recovery.sh  README.md  check_zhipu.rs  memory_test.rs  verification.rs  verify_mcp.rs  verify_p3.rs  worker_host.py
examples/07_refactoring_legacy/: blog_post.md  log.txt  run.py
examples/08_bug_fixing_rust/: blog_post.md  run.py
examples/09_data_analysis/: blog_post.md  run.py
examples/10_multi_file_api/: blog_post.md  run.py
examples/11_dockerization/: run.py
examples/12_unit_testing/: run.py
examples/13_web_scraping/: run.py
examples/14_zhihu_style_analysis/: .env.example  .gitignore  README.md  analyze_style.py  analyzer.rs  process_and_strategy.md  run.py  run_analysis.rs  run_generate.py  scrape_20_articles.py  scrape_zhihu.py
examples/14_zhihu_style_analysis/articles/: AI 技术栈的整合路径.txt  Agentic AI 时代，CPU 为什么突然成了最大瓶颈？.txt  Cursor 给 AI 辅助编程带来了什么变化.txt  Databrick 为什么买 MosaicML.txt  GPT-Inside 的新 AI Stack.txt  GPT-Inside的新AIStack.txt  Hash 的 or_insert.txt  Langchain 是什么？.txt  Parquet 的类型.txt  Parquet 的编码方式.txt  Prisma 简介.txt  Python 的 with 语句.txt  RUST 笔记.txt  Ray 1.0 架构解读.txt  Ray 分布式计算框架介绍.txt  Ray 如何远程执行 Python 代码.txt  Ray分布式计算框架介绍.txt  Rust Macro 手册.txt  Rust 动态类型.txt  Select 的作用.txt  Tokio 每天学一点.txt  Trait 加泛型.txt  Trait 和动态分配.txt  groq 推理速度为什么这么快？.txt  impl.txt  kv cache 共享可以带来什么.txt  不断变化的 Rust 异步生态，是对性能和优雅的极致追求.txt  不断变化的Rust异步生态.txt  中国软件企业服务市场会改变吗？.txt  从 DeepSeek 五连发看 vLLM 优化方向.txt  代码容易生成，但软件为什么还是这么贵？.txt  函数.txt  变量和可变性.txt  在 Rust 里面调用 Python.txt  大型语言模型和 RLHF 的完整故事.txt  大模型会如何重塑产业格局.txt  大模型会改变数据分析市场格局吗.txt  大模型会改变数据分析市场格局吗？.txt  大模型和企业应用结合正当时.txt  大模型时代，Databricks 向左，Snowflake 向右.txt  (+24 more)
python/zene/: Cargo.toml  README.md  pyproject.toml
python/zene/src/: lib.rs
src/: lib.rs  lib_placeholder.rs  main.rs
src/agent/: client.rs  compactor.rs  engine.rs  executor.rs  mod.rs  orchestrator.rs  planner.rs  reflector.rs  runner.rs  tool_handler.rs
src/config/: mcp.rs  mod.rs
src/engine/: context.rs  contracts.rs  error.rs  mod.rs  plan.rs  python_env.rs  session.rs  tools.rs  ui.rs
src/engine/mcp/: manager.rs
src/engine/memory/: embedder.rs  mod.rs  store.rs
src/engine/session/: mod.rs  store.rs
src/testing/: mod.rs
tests/: it_agent_flow.rs  it_host_protocol.rs  it_protocol_schema_snapshot.rs  patch_test.rs
www/: .gitignore  index.md  package-lock.json  package.json  roadmap.md
www/.vitepress/: config.mts
www/.vitepress/theme/: style.css
www/blog/: data-analysis.md  dockerization.md  index.md  multi-file-api.md  python-env-verification.md  unit-testing.md  web-scraping.md
www/design/: spawn-vs-daemon.md  warm-pool.md
www/dev/: clawbridge-command-provider-quickstart.md  host-protocol-v1-examples.md  index.md  railway-production-params.md  zene-error-code-degrade-matrix.md  zene-host-protocol-v1-mvp.md  zene-production-execution-tasklist.md
www/examples/: index.md
www/guide/: architecture.md  executor.md  getting-started.md  integration.md  mcp.md  memory.md  optimization.md  planner.md  python.md  reflector.md  simple-mode.md  testing.md  what-is-zene.md  worker.md
www/guide/design/: execution-kernel.md  multi-user.md
