[package]
name = "zene"
version = "0.3.1"
edition = "2021"
description = "A minimalist, high-performance multi-agent coding engine written in Rust."
license = "MIT"
repository = "https://github.com/lipish/zene"
keywords = ["coding", "agent", "engine", "ai", "rust"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "www",
    ".fastembed_cache",
    "temp_workspace",
    "examples",
    "docs",
    ".github",
    ".vscode"
]

[dependencies]
# Runtime & Async
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# CLI & Configuration
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Communication (Headless / API)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client (for fetch_url tool)
reqwest = { version = "0.11", features = ["json", "blocking"] }

# LLM Integration
llm-connector = "0.6.0"

# Code Analysis & Context
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
ignore = "0.4" # For file walking respecting .gitignore
grep = "0.2"   # For searching text patterns
walkdir = "2.3" # For directory traversal (if needed, but ignore is better)
zene-mcp = "0.1.0"
toml = "1.0.2"
fastembed = "5.9.0"
usearch = "2.24.0"
md5 = "0.8.0"

# Optional: For future MCP or LSP implementation
# tower-lsp = "0.20" 

[lib]
name = "zene"
path = "src/lib.rs"

[[bin]]
name = "zene"
path = "src/main.rs" 
