[package]
name = "zene"
version = "0.5.5"
edition = "2021"
description = "A high-performance multi-agent coding engine with autonomous planning and reflection."
license = "MIT"
repository = "https://github.com/lipish/zene"
keywords = ["coding", "agent", "engine", "ai", "rust"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "www",
    ".fastembed_cache",
    "temp_workspace",
    "examples",
    "docs",
    ".github",
    ".vscode"
]
[features]
default = []
knowledge = ["fastembed", "usearch", "md5"]
pyo3 = ["dep:pyo3"]

[dependencies]
# Runtime & Async
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

# CLI & Configuration
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Communication (Headless / API)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client (for fetch_url tool)
reqwest = { version = "0.12", features = ["json"] }

# LLM Integration
llm-connector = { version = "0.7.1", features = ["streaming"] }
llm_providers = "0.5.0"

# Code Analysis & Context
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
ignore = "0.4" # For file walking respecting .gitignore
grep = "0.2"   # For searching text patterns
grep-regex = "0.1"
walkdir = "2.3" # For directory traversal (if needed, but ignore is better)
zene-mcp = "0.1.0"
toml = "1.0.2"
fastembed = { version = "5.9.0", optional = true }
usearch = { version = "2.24.0", optional = true }
md5 = { version = "0.8.0", optional = true }
async-trait = "0.1.89"
futures = "0.3"
xtrace-client = { version = "0.0.13", git = "https://github.com/lipish/xtrace", features = ["tracing"] }

# Optional: For future MCP or LSP implementation
# tower-lsp = "0.20" 

[lib]
name = "zene"
path = "src/lib.rs"

[[bin]]
name = "zene"
path = "src/main.rs"

[[example]]
name = "check_zhipu"
path = "examples/check_zhipu.rs"
