[package]
name = "zene"
version = "0.6.3"
edition = "2021"
description = "A high-performance multi-agent coding engine with autonomous planning and reflection."
license = "MIT"
repository = "https://github.com/lipish/zene"
keywords = ["coding", "agent", "engine", "ai", "rust"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = [
    ".",
    "crates/zene-core",
    "crates/zene-worker",
]

[workspace.dependencies]
zene-core = { path = "crates/zene-core" }
zene-worker = { path = "crates/zene-worker" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
zene-core = { workspace = true }
zene-worker = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }

[lib]
name = "zene_unused"
path = "src/lib_placeholder.rs"

[[bin]]
name = "zene"
path = "src/main.rs"

[[example]]
name = "check_zhipu"
path = "examples/check_zhipu.rs"

[[example]]
name = "zhihu_analysis_rust"
path = "examples/14_zhihu_style_analysis/run_analysis.rs"
