[package]
name = "zene-core"
version = "0.6.1"
edition = "2021"

[dependencies]
# Runtime & Async
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# CLI & Configuration
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Communication (Headless / API)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP Client (for fetch_url tool)
reqwest = { version = "0.12", features = ["json"] }

# LLM Integration
llm-connector = { version = "0.7.1", features = ["streaming"] }
llm_providers = "0.6.0"

# Code Analysis & Context
regex = "1.10"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
ignore = "0.4"
grep = "0.2"
grep-regex = "0.1"
walkdir = "2.3"
zene-mcp = "0.1.0"
toml = "1.0.2"
async-trait = "0.1.89"
futures = "0.3"
xtrace-client = { version = "0.0.13", git = "https://github.com/lipish/xtrace", features = ["tracing"] }
streaming-iterator = "0.1.9"
fastembed = { version = "5.9.0", optional = true }
usearch = { version = "2.24.0", optional = true }
md5 = { version = "0.8.0", optional = true }

[features]
default = []
knowledge = ["fastembed", "usearch", "md5"]
