[package]
name = "zene-worker"
version = "0.1.0"
edition = "2021"
description = "Worker runtime for Zene host and execution loop integration."
license = "MIT"
repository = "https://github.com/ParaTensor/zene"

[dependencies]
zene-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
